extends Control

func _ready():
	self.visible = false



func _on_AghoyButton_pressed():
	print("Aghoy displayed.")


func _on_MangkukulamButton_pressed():
	print("Mangkukulam displayed.")


func _on_TiyanakButton_pressed():
	print("Tiyanak displayed.")


func _on_TikbalangButton_pressed():
	print("Tikbalang displayed.")


func _on_ManananggalButton_pressed():
	print("Manananggal displayed.")


func _on_BungisngisButton_pressed():
	print("Bungisngis displayed.")
